#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT(testowe, 0.1, foo@bar.com)
AC_CONFIG_SRCDIR([main.cpp])
AM_INIT_AUTOMAKE

# Checks for programs. 
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_MAKE_SET

# Checks for libraries.
AM_PROG_LIBTOOL

# Checks for header files.
# Checks for typedefs, structures, and compiler characteristics.
# Checks for library functions.
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
